ags (0.7.122.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented ags-play-pattern recall
	* fixed broken optical feedback of peak
	* removed auto-scroll feature because it costs too much performance

ags (0.7.122.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented non-deterministic mode i.e. performance mode
	* implemented ags_input_next_active() and ags_input_is_active()
	* implemented restore and persist of AgsLv2Bridge preset
	* disabled lv2 worker feature if not requested by plugin
	* fixed memory leak related to AgsReturnableThread
	* fixed crash related to notation offset cached
	* note disabled some signals

ags (0.7.122.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags-copy recall to instantiate like ags-buffer
	* implemented LV2 presets
	* implemented presets in AgsLv2Bridge
	* implemented ags-prepare recall
	* implemented AgsConditionManager to use with AgsThread tree lock functions
	* implemented worker threads
	* implemented destroy worker
	* improved AgsDelayAudio port instantiation to use default values
	* fixed using default values as no soundcard available
	* fixed crash as no soundcard configured within GUI
	* fixed AgsThread tree lock functions
	* added more unit tests in ags_thread_test.c

ags (0.7.122.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHLedArray and AgsVLedArray
	* implemented missing properties of AgsPlaybackDomain and AgsPlayback
	* implemented GObject::dispose()
	* refactored AgsCellPattern and AgsPatternBox to use AgsHLedArray
	* fixed reference counting of libags, libags_audio
	* fixed division by zero caused by AgsOscillator
	* fixed serious memory corruption in ags_pattern_set_dim()
	* fixed segmentation fault of AgsFFPlayer restore
	* fixed missing connection menu of AgsLv2Bridge after restore
	* extended unit tests

ags (0.7.122.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]