@@ -31,7 +31,7 @@ ags_panel_input_line_notify_data_object_callback(GObject *audio_connection,
   gchar *str;
   
   str = g_strdup_printf("%s:%s[%d]\0",
-			G_OBJECT_TYPE_NAME(AGS_LINE(panel_input_line)->channel->soundcard),
+			G_OBJECT_TYPE_NAME(AGS_CONNECTION(audio_connection)->data_object),
 			ags_soundcard_get_device(AGS_SOUNDCARD(AGS_CONNECTION(audio_connection)->data_object)),
 			AGS_AUDIO_CONNECTION(audio_connection)->mapped_line);
   gtk_label_set_label(panel_input_line->soundcard_connection,
@@ -46,7 +46,7 @@ ags_panel_input_line_notify_mapped_line_callback(GObject *audio_connection,
   gchar *str;
   
   str = g_strdup_printf("%s:%s[%d]\0",
-			G_OBJECT_TYPE_NAME(AGS_LINE(panel_input_line)->channel->soundcard),
+			G_OBJECT_TYPE_NAME(AGS_CONNECTION(audio_connection)->data_object),
 			ags_soundcard_get_device(AGS_SOUNDCARD(AGS_CONNECTION(audio_connection)->data_object)),
 			AGS_AUDIO_CONNECTION(audio_connection)->mapped_line);
   gtk_label_set_label(panel_input_line->soundcard_connection,
